--- a/css/largeScreen.css
+++ b/css/largeScreen.css
@@ -31,6 +31,8 @@
     
     #featuredIcons {
         flex-direction: row;
+        max-width: 80%;
+        margin: 10px auto;
     }
 
     #sitemap {
