--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@
 }
 /*Styles applied to tagline*/
  #featured1{
-     padding: 10% 5% 0 5%;
+     padding: 5% 5% 0 5%;
      color: white;
      display: flex;
      font-size: 3em;
@@ -91,7 +91,7 @@
     text-align: center;
     height: 100%;
     flex-wrap: wrap;
-    margin: 10px 2% 10px 2%;
+    margin: 10px 2%;
 }
 
  #featuredIcons> div {
@@ -121,7 +121,7 @@
 
 /*If JavaScript is off*/
 #noscript{
-    background: url("/images/Map.png");
+    background: url("images/Map.png");
     width: 100%;
     height: 400px;
     background-repeat: no-repeat;
@@ -136,18 +136,18 @@
 #noscript a{
 	text-decoration: none;
 	color: black;
+    display: inline-block;
 }
 /*------------------*/
 
 #map {
      height: 400px;
-    /* The height is 400 pixels */
-     width: 99%;
-    /* The width is 99% of the width of the web page */
-     margin: auto;
-     /*border-style: solid;
-     border-radius: 10px;
-     border-color: rgb(240,240,240);*/
+     width: 98%;
+     margin: auto auto 10px auto;
+     border-style: solid;
+     border-width: 5px;
+     border-radius: 3%;
+     border-color: rgb(240,240,240);
 }
 
 #map p{
