--- a/css/mediumScreen.css
+++ b/css/mediumScreen.css
@@ -1,6 +1,7 @@
 @media screen and (max-width: 770px) {
     #flexSections {
         align-items: center;
+        flex-direction: column;
     }
 
     form {
